[MODORDERS-1048] - Create Inventory objects in appropriate tenant from location for Change Instance Connection (#946)
[MODORDERS-1048] - Create Inventory objects in appropriate tenant from location for Change Instance Connection