@@ -1,37 +1,39 @@
 package org.folio.service.orders.lines.update.instance;
 
-import static java.util.stream.Collectors.toList;
-import static org.folio.service.inventory.InventoryItemManager.ID;
-import static org.folio.service.inventory.InventoryItemManager.ITEM_HOLDINGS_RECORD_ID;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.function.Consumer;
-import java.util.stream.Stream;
-
+import io.vertx.core.Future;
+import io.vertx.core.json.JsonObject;
+import one.util.streamex.StreamEx;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
-import org.apache.commons.lang3.ObjectUtils;
 import org.folio.models.orders.lines.update.OrderLineUpdateInstanceHolder;
 import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.orders.utils.PoLineCommonUtil;
+import org.folio.orders.utils.RequestContextUtil;
 import org.folio.rest.acq.model.StoragePatchOrderLineRequest;
 import org.folio.rest.core.exceptions.ErrorCodes;
 import org.folio.rest.core.exceptions.HttpException;
 import org.folio.rest.core.models.RequestContext;
+import org.folio.rest.jaxrs.model.CompositePoLine;
 import org.folio.rest.jaxrs.model.Error;
 import org.folio.rest.jaxrs.model.Location;
 import org.folio.rest.jaxrs.model.Parameter;
 import org.folio.rest.jaxrs.model.Piece;
+import org.folio.rest.jaxrs.model.PoLine;
 import org.folio.rest.jaxrs.model.ReplaceInstanceRef;
 import org.folio.service.inventory.InventoryHoldingManager;
 import org.folio.service.inventory.InventoryItemManager;
 import org.folio.service.pieces.PieceStorageService;
 
-import io.vertx.core.Future;
-import io.vertx.core.json.JsonObject;
-import one.util.streamex.StreamEx;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
+import static org.folio.service.inventory.InventoryItemManager.ID;
+import static org.folio.service.inventory.InventoryItemManager.ITEM_HOLDINGS_RECORD_ID;
 
 
 public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpdateInstanceStrategy {
@@ -48,38 +50,74 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
   }
 
   protected Future<Void> processHoldings(OrderLineUpdateInstanceHolder holder, RequestContext requestContext) {
-    if (Objects.nonNull(holder.getPatchOrderLineRequest().getReplaceInstanceRef())) {
-      ReplaceInstanceRef replaceInstanceRef = holder.getPatchOrderLineRequest().getReplaceInstanceRef();
-      String newInstanceId = replaceInstanceRef.getNewInstanceId();
-
-      holder.createStoragePatchOrderLineRequest(StoragePatchOrderLineRequest.PatchOrderLineOperationType.REPLACE_INSTANCE_REF, newInstanceId);
-
-      return switch (replaceInstanceRef.getHoldingsOperation()) {
-        case MOVE -> moveHoldings(holder, newInstanceId, requestContext);
-        case FIND_OR_CREATE -> findOrCreateHoldingsAndUpdateItems(holder, newInstanceId, requestContext)
-          // TODO: onSuccess or compose ???
-          .onSuccess(v -> deleteAbandonedHoldings(replaceInstanceRef.getDeleteAbandonedHoldings(), holder.getStoragePoLine(), requestContext));
-        case CREATE -> createHoldingsAndUpdateItems(holder, newInstanceId, requestContext)
-          .onSuccess(v -> deleteAbandonedHoldings(replaceInstanceRef.getDeleteAbandonedHoldings(), holder.getStoragePoLine(), requestContext));
-        default -> Future.succeededFuture();
-      };
-    } else {
+    ReplaceInstanceRef replaceInstanceRef = holder.getPatchOrderLineRequest().getReplaceInstanceRef();
+    if (replaceInstanceRef == null) {
       return Future.succeededFuture();
     }
+    String newInstanceId = replaceInstanceRef.getNewInstanceId();
+
+    holder.createStoragePatchOrderLineRequest(StoragePatchOrderLineRequest.PatchOrderLineOperationType.REPLACE_INSTANCE_REF, newInstanceId);
+    PoLine poLine = holder.getStoragePoLine();
+
+    return switch (replaceInstanceRef.getHoldingsOperation()) {
+      case MOVE -> moveHoldings(poLine, newInstanceId, requestContext);
+      case FIND_OR_CREATE -> findOrCreateHoldingsAndUpdateItems(holder, newInstanceId, requestContext)
+        .compose(v -> deleteAbandonedHoldings(replaceInstanceRef.getDeleteAbandonedHoldings(), poLine, requestContext));
+      case CREATE -> createHoldingsAndUpdateItems(holder, newInstanceId, requestContext)
+        .compose(v -> deleteAbandonedHoldings(replaceInstanceRef.getDeleteAbandonedHoldings(), poLine, requestContext));
+      default -> Future.succeededFuture();
+    };
   }
 
 
-  private Future<Void> moveHoldings(OrderLineUpdateInstanceHolder holder, String newInstanceId, RequestContext requestContext) {
-    return pieceStorageService.getPiecesByPoLineId(PoLineCommonUtil.convertToCompositePoLine(holder.getStoragePoLine()), requestContext)
-      .map(pieces -> extractUniqueHoldingIds(pieces, holder.getStoragePoLine().getLocations()))
-      .compose(holdingIds -> {
-        holdingIds.forEach(holdingId -> holder.addHoldingRefsToStoragePatchOrderLineRequest(holdingId, holdingId));
-        return inventoryHoldingManager.getHoldingsByIds(holdingIds, requestContext);
-      })
-      .compose(holdings -> {
-        removeHoldingUnrecognizedFields(holdings);
-        return inventoryHoldingManager.updateInstanceForHoldingRecords(holdings, newInstanceId, requestContext);
-      });
+  private Future<Void> moveHoldings(PoLine poLine, String newInstanceId, RequestContext requestContext) {
+    CompositePoLine compPOL = PoLineCommonUtil.convertToCompositePoLine(poLine);
+    return pieceStorageService.getPiecesByPoLineId(compPOL, requestContext)
+      .map(pieces -> getHoldingsByTenants(poLine, pieces, requestContext))
+      .compose(holdingsByTenant -> {
+          var updateHoldings = holdingsByTenant.entrySet()
+            .stream()
+            .map(entry -> entry.getValue().compose(holdings -> {
+              removeHoldingUnrecognizedFields(holdings);
+              var locationContext = RequestContextUtil.createContextWithNewTenantId(requestContext, entry.getKey());
+              return inventoryHoldingManager.updateInstanceForHoldingRecords(holdings, newInstanceId, locationContext);
+            }))
+            .toList();
+          return GenericCompositeFuture.all(updateHoldings).mapEmpty();
+        }
+      );
+  }
+
+  private Map<String, Future<List<JsonObject>>> getHoldingsByTenants(PoLine poLine, List<Piece> pieces, RequestContext requestContext) {
+    Map<String, List<String>> holdingsByTenant = new HashMap<>();
+    for (var piece : pieces) {
+      String holdingId = piece.getHoldingId();
+      if (holdingId != null) {
+        putHolding(piece.getReceivingTenantId(), holdingsByTenant, holdingId);
+      }
+    }
+    for (var location : poLine.getLocations()) {
+      String holdingId = location.getHoldingId();
+      if (holdingId != null) {
+        putHolding(location.getTenantId(), holdingsByTenant, holdingId);
+      }
+    }
+    return holdingsByTenant.entrySet()
+      .stream()
+      .collect(Collectors.toMap(
+        Map.Entry::getKey,
+        entry -> {
+          var newContext = RequestContextUtil.createContextWithNewTenantId(requestContext, entry.getKey());
+          return inventoryHoldingManager.getHoldingsByIds(entry.getValue(), newContext);
+        }
+      ));
+  }
+
+  private void putHolding(String tenantId, Map<String, List<String>> holdingsByTenant, String holdingId) {
+    List<String> list = holdingsByTenant.computeIfAbsent(tenantId, k -> new ArrayList<>());
+    if (!list.contains(holdingId)) {
+      list.add(holdingId);
+    }
   }
 
   private void removeHoldingUnrecognizedFields(List<JsonObject> holdings) {
@@ -90,81 +128,98 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
   }
 
   private Future<Void> findOrCreateHoldingsAndUpdateItems(OrderLineUpdateInstanceHolder holder,
-      String newInstanceId, RequestContext requestContext) {
-    List<Future<Void>> futures = new ArrayList<>();
-    return retrieveUniqueLocationsAndConsume(holder, requestContext, location -> {
-      String holdingId = location.getHoldingId();
-      futures.add(inventoryHoldingManager.getOrCreateHoldingRecordByInstanceAndLocation(newInstanceId, location, requestContext)
-        .compose(newHoldingId -> {
-          holder.addHoldingRefsToStoragePatchOrderLineRequest(holdingId, newHoldingId);
-          if (ObjectUtils.notEqual(holdingId, newHoldingId)) {
-            return updateItemsHolding(holdingId, newHoldingId, holder.getStoragePoLine().getId(), requestContext);
-          } else {
-            return Future.succeededFuture();
-          }
-        }));
-    })
-      .compose(v -> GenericCompositeFuture.join(new ArrayList<>(futures))
-        .map(ok -> null));
-  }
-
-  private Future<Void> createHoldingsAndUpdateItems(OrderLineUpdateInstanceHolder holder,
-      String newInstanceId, RequestContext requestContext) {
-    List<Future<Void>> futures = new ArrayList<>();
-    return retrieveUniqueLocationsAndConsume(holder, requestContext, location -> {
-      String holdingId = location.getHoldingId();
-      futures.add(inventoryHoldingManager.createHolding(newInstanceId, location, requestContext)
-        .compose(newHoldingId -> {
-          holder.addHoldingRefsToStoragePatchOrderLineRequest(holdingId, newHoldingId);
-          return updateItemsHolding(holdingId, newHoldingId, holder.getStoragePoLine().getId(), requestContext);
-        }));
-    }).compose(v -> GenericCompositeFuture.join(new ArrayList<>(futures)))
+                                                          String newInstanceId, RequestContext requestContext) {
+    return retrieveUniqueLocations(holder.getStoragePoLine(), requestContext)
+      .compose(locations -> GenericCompositeFuture.join(
+          locations.stream()
+            .map(location -> findOrCreateHoldingsAndUpdateItems(holder, newInstanceId, location, requestContext))
+            .toList()
+        )
+      )
       .mapEmpty();
   }
 
-  private Future<Void> retrieveUniqueLocationsAndConsume(OrderLineUpdateInstanceHolder holder, RequestContext requestContext,
-                                                                    Consumer<Location> consumer) {
-    return pieceStorageService.getPiecesByPoLineId(PoLineCommonUtil.convertToCompositePoLine(holder.getStoragePoLine()), requestContext)
+  private Future<Void> findOrCreateHoldingsAndUpdateItems(OrderLineUpdateInstanceHolder holder,
+                                                          String newInstanceId,
+                                                          Location location,
+                                                          RequestContext requestContext) {
+    PoLine poLine = holder.getStoragePoLine();
+    String holdingId = location.getHoldingId();
+    var locationContext = RequestContextUtil.createContextWithNewTenantId(requestContext, location.getTenantId());
+    return inventoryHoldingManager.getOrCreateHoldingRecordByInstanceAndLocation(newInstanceId, location, locationContext)
+      .compose(newHoldingId -> {
+        holder.addHoldingRefsToStoragePatchOrderLineRequest(holdingId, newHoldingId);
+        if (Objects.equals(holdingId, newHoldingId)) {
+          return Future.succeededFuture();
+        }
+        return updateItemsHolding(holdingId, newHoldingId, poLine.getId(), locationContext);
+      });
+  }
+
+  private Future<Void> createHoldingsAndUpdateItems(OrderLineUpdateInstanceHolder holder,
+                                                    String newInstanceId, RequestContext requestContext) {
+    return retrieveUniqueLocations(holder.getStoragePoLine(), requestContext)
+      .compose(locations -> GenericCompositeFuture.join(
+          locations.stream()
+            .map(location -> createHoldingsAndUpdateItems(holder, newInstanceId, location, requestContext))
+            .toList()
+        )
+      )
+      .mapEmpty();
+  }
+
+  private Future<Void> createHoldingsAndUpdateItems(OrderLineUpdateInstanceHolder holder,
+                                                    String newInstanceId,
+                                                    Location location,
+                                                    RequestContext requestContext) {
+    PoLine poLine = holder.getStoragePoLine();
+    String holdingId = location.getHoldingId();
+    var locationContext = RequestContextUtil.createContextWithNewTenantId(requestContext, location.getTenantId());
+    return inventoryHoldingManager.createHolding(newInstanceId, location, locationContext)
+      .compose(newHoldingId -> {
+        holder.addHoldingRefsToStoragePatchOrderLineRequest(holdingId, newHoldingId);
+        return updateItemsHolding(holdingId, newHoldingId, poLine.getId(), locationContext);
+      });
+  }
+
+  private Future<List<Location>> retrieveUniqueLocations(PoLine poLine, RequestContext requestContext) {
+    return pieceStorageService.getPiecesByPoLineId(PoLineCommonUtil.convertToCompositePoLine(poLine), requestContext)
       .map(pieces -> {
         List<Location> pieceHoldingIds = pieces
           .stream()
           .map(piece -> new Location().withHoldingId(piece.getHoldingId()).withLocationId(piece.getLocationId()))
           .collect(toList());
-        List<Location> storageHoldingIds = holder.getStoragePoLine().getLocations();
+        List<Location> storageHoldingIds = poLine.getLocations();
 
-        StreamEx.of(ListUtils.union(pieceHoldingIds, storageHoldingIds))
+        return StreamEx.of(ListUtils.union(pieceHoldingIds, storageHoldingIds))
           .distinct(location -> String.format("%s %s", location.getLocationId(), location.getHoldingId()))
           .filter(location -> Objects.nonNull(location.getHoldingId()))
-          .forEach(consumer);
-        return null;
-      })
-      .map(pieces -> null);
+          .toList();
+      });
   }
 
   private Future<Void> updateItemsHolding(String holdingId, String newHoldingId, String poLineId, RequestContext requestContext) {
     return inventoryItemManager.getItemsByHoldingIdAndOrderLineId(holdingId, poLineId, requestContext)
-        .map(items -> updateItemHoldingId(items, newHoldingId))
-        .compose(items -> updateItemsInInventory(items, requestContext));
+      .compose(items -> updateItemsInInventory(items, newHoldingId, requestContext));
   }
 
-  private List<JsonObject> updateItemHoldingId(List<JsonObject> items, String holdingId) {
-    items.forEach(item -> item.put(ITEM_HOLDINGS_RECORD_ID, holdingId));
-    return items;
-  }
-
-  private Future<Void> updateItemsInInventory(List<JsonObject> items, RequestContext requestContext) {
+  private Future<Void> updateItemsInInventory(List<JsonObject> items, String newHoldingId, RequestContext requestContext) {
+    items.forEach(item -> item.put(ITEM_HOLDINGS_RECORD_ID, newHoldingId));
     List<Parameter> parameters = new ArrayList<>();
-    return GenericCompositeFuture.join(items.stream()
-      .map(item -> inventoryItemManager.updateItem(item, requestContext)
-        .otherwise(ex -> {
-          Parameter parameter = new Parameter().withKey("itemId").withValue(item.getString(ID));
-          if (ex.getCause() instanceof HttpException httpException) {
-            parameter.withAdditionalProperty("originalError", httpException.getError().getMessage());
-          }
-          parameters.add(parameter);
-          return null;
-        }))
-      .collect(toList()))
+    return GenericCompositeFuture.join(
+      items
+        .stream()
+        .map(item -> inventoryItemManager.updateItem(item, requestContext)
+          .otherwise(ex -> {
+            Parameter parameter = new Parameter().withKey("itemId").withValue(item.getString(ID));
+            if (ex.getCause() instanceof HttpException httpException) {
+              parameter.withAdditionalProperty("originalError", httpException.getError().getMessage());
+            }
+            parameters.add(parameter);
+            return null;
+          }))
+        .toList()
+      )
       .mapEmpty()
       .map(v -> {
         if (CollectionUtils.isNotEmpty(parameters)) {
@@ -173,14 +228,6 @@ public class WithHoldingOrderLineUpdateInstanceStrategy extends BaseOrderLineUpd
         }
         return null;
       });
-  }
-
-  private List<String> extractUniqueHoldingIds(List<Piece> pieces, List<Location> locations) {
-    return Stream.concat(pieces.stream().map(Piece::getHoldingId),
-        locations.stream().map(Location::getHoldingId))
-      .distinct()
-      .filter(Objects::nonNull)
-      .collect(toList());
   }
 
 }
